Internal change
PiperOrigin-RevId: 657974099